load("//rules:web-code.bzl", "web_code_service")
package(default_visibility = ["//visibility:public"])

web_code_service(
    package = "//src/platform/growthplatform/communications-authoring-platform/web-services-components/wcb3-modal-popup",
    deps = [
        "//:.yarn",
        "//src/common/@uber/babel-config:library",
        "//src/common/@uber/eslint-config:library",
        "//src/common/@uber/eslint-plugin:library",
        "//src/common/@uber/jest-config:library",
        "//src/common/baseui:library",
        "//src/infra/devplatform/web-ops/type-check:library",
        "//src/platform/growthplatform/common/@uber/component-common:library",
        "//src/platform/growthplatform/communications-authoring-platform/web-services-components/dotcom-ui:library",
    ],
    srcs = glob(["**"], exclude = ["dist-node-cjs/**", "dist-node-esm/**", "dist-browser-cjs/**", "dist-browser-esm/**", ".flowconfig"]),
    dist = ["dist-node-cjs", "dist-node-esm", "dist-browser-cjs", "dist-browser-esm"],
  usesFlow = True,
)

filegroup(
  name = "flow-libdefs",
  srcs = [
    "//:flow-typed/npm/@rtsao/csstype_v2.x.x.js",
    "//:flow-typed/npm/@testing-library/jest-dom_v4.x.x.js",
    "//:flow-typed/npm/@testing-library/jest-dom_v5.5.x.js",
    "//:flow-typed/npm/@testing-library/jest-dom_v5.x.x.js",
    "//:flow-typed/npm/@testing-library/jest-dom_vx.x.x.js",
    "//:flow-typed/npm/@testing-library/react_v10.x.x.js",
    "//:flow-typed/npm/@testing-library/react_v11.x.x.js",
    "//:flow-typed/npm/@testing-library/react_v13.x.x.js",
    "//:flow-typed/npm/babel-eslint_vx.x.x.js",
    "//:flow-typed/npm/babel-jest_vx.x.x.js",
    "//:flow-typed/npm/create-universal-package_vx.x.x.js",
    "//:flow-typed/npm/enzyme_v3.x.x.js",
    "//:flow-typed/npm/enzyme-to-json_vx.x.x.js",
    "//:flow-typed/npm/eslint_v4.x.x.js",
    "//:flow-typed/npm/eslint_vx.x.x.js",
    "//:flow-typed/npm/eslint-config-fusion_vx.x.x.js",
    "//:flow-typed/npm/eslint-config-prettier_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-baseui_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-cup_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-flowtype_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-import_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-jest_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-jsx-a11y_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-prettier_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-react_vx.x.x.js",
    "//:flow-typed/npm/eslint-plugin-react-hooks_vx.x.x.js",
    "//:flow-typed/npm/flow-bin_v0.x.x.js",
    "//:flow-typed/npm/flow-bin_vx.x.x.js",
    "//:flow-typed/npm/jest_v23.x.x.js",
    "//:flow-typed/npm/jest_v24.x.x.js",
    "//:flow-typed/npm/jest_v25.x.x.js",
    "//:flow-typed/npm/jest_v26.x.x.js",
    "//:flow-typed/npm/jest_v27.x.x.js",
    "//:flow-typed/npm/jest-environment-jsdom_vx.x.x.js",
    "//:flow-typed/npm/jest-environment-jsdom-global_vx.x.x.js",
    "//:flow-typed/npm/prettier_v1.x.x.js",
    "//:flow-typed/npm/prettier_vx.x.x.js",
    "//:flow-typed/npm/styletron-engine-snapshot_vx.x.x.js",
    "//:flow-typed/npm/styletron-react_v5.x.x.js",
    "//:flow-typed/npm/styletron-standard_v3.x.x.js",
  ]
)
